tests-snapshots/dbc-cantools/issue_184_extended_mux_cascaded_dumped.snap.stderr
error[E0425]: cannot find type `ExtMuxCascadedMuxAIndex` in this scope
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_cascaded_dumped.snap.rs:192:39
    |
192 |     pub fn mux_a(&mut self) -> Result<ExtMuxCascadedMuxAIndex, CanError> {
    |                                       ^^^^^^^^^^^^^^^^^^^^^^^
...
302 | pub enum ExtMuxCascadedMuxedA2MuxBIndex {
    | --------------------------------------- similarly named enum `ExtMuxCascadedMuxedA2MuxBIndex` defined here
    |
help: an enum with a similar name exists
    |
192 -     pub fn mux_a(&mut self) -> Result<ExtMuxCascadedMuxAIndex, CanError> {
192 +     pub fn mux_a(&mut self) -> Result<ExtMuxCascadedMuxedA2MuxBIndex, CanError> {
    |
help: you might be missing a type parameter
    |
 67 | impl<ExtMuxCascadedMuxAIndex> ExtMuxCascaded {
    |     +++++++++++++++++++++++++

error[E0422]: cannot find struct, variant or union type `ExtMuxCascadedMuxAM0` in this scope
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_cascaded_dumped.snap.rs:196:49
    |
 55 | pub struct ExtMuxCascaded {
    | ------------------------- similarly named struct `ExtMuxCascaded` defined here
...
196 |                     ExtMuxCascadedMuxAIndex::M0(ExtMuxCascadedMuxAM0 {
    |                                                 ^^^^^^^^^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtMuxCascaded`

error[E0422]: cannot find struct, variant or union type `ExtMuxCascadedMuxAM1` in this scope
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_cascaded_dumped.snap.rs:203:49
    |
 55 | pub struct ExtMuxCascaded {
    | ------------------------- similarly named struct `ExtMuxCascaded` defined here
...
203 |                     ExtMuxCascadedMuxAIndex::M1(ExtMuxCascadedMuxAM1 {
    |                                                 ^^^^^^^^^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtMuxCascaded`

error[E0425]: cannot find type `ExtMuxCascadedMuxAM0` in this scope
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_cascaded_dumped.snap.rs:237:37
    |
 55 | pub struct ExtMuxCascaded {
    | ------------------------- similarly named struct `ExtMuxCascaded` defined here
...
237 |     pub fn set_m0(&mut self, value: ExtMuxCascadedMuxAM0) -> Result<(), CanError> {
    |                                     ^^^^^^^^^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtMuxCascaded`

error[E0425]: cannot find type `ExtMuxCascadedMuxAM1` in this scope
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_cascaded_dumped.snap.rs:246:37
    |
 55 | pub struct ExtMuxCascaded {
    | ------------------------- similarly named struct `ExtMuxCascaded` defined here
...
246 |     pub fn set_m1(&mut self, value: ExtMuxCascadedMuxAM1) -> Result<(), CanError> {
    |                                     ^^^^^^^^^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtMuxCascaded`

error[E0592]: duplicate definitions with name `set_m0`
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_cascaded_dumped.snap.rs:237:5
    |
155 | /     pub fn set_m0(
156 | |         &mut self,
157 | |         value: ExtMuxCascadedMuxedA2MuxBM0,
158 | |     ) -> Result<(), CanError> {
    | |_____________________________- other definition for `set_m0`
...
237 |       pub fn set_m0(&mut self, value: ExtMuxCascadedMuxAM0) -> Result<(), CanError> {
    |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `set_m0`

error[E0592]: duplicate definitions with name `set_m1`
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_cascaded_dumped.snap.rs:246:5
    |
167 | /     pub fn set_m1(
168 | |         &mut self,
169 | |         value: ExtMuxCascadedMuxedA2MuxBM1,
170 | |     ) -> Result<(), CanError> {
    | |_____________________________- other definition for `set_m1`
...
246 |       pub fn set_m1(&mut self, value: ExtMuxCascadedMuxAM1) -> Result<(), CanError> {
    |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `set_m1`

error[E0433]: failed to resolve: use of undeclared type `ExtMuxCascadedMuxAIndex`
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_cascaded_dumped.snap.rs:196:21
    |
196 |                     ExtMuxCascadedMuxAIndex::M0(ExtMuxCascadedMuxAM0 {
    |                     ^^^^^^^^^^^^^^^^^^^^^^^
    |                     |
    |                     use of undeclared type `ExtMuxCascadedMuxAIndex`
    |                     help: an enum with a similar name exists: `ExtMuxCascadedMuxedA2MuxBIndex`

error[E0433]: failed to resolve: use of undeclared type `ExtMuxCascadedMuxAIndex`
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_cascaded_dumped.snap.rs:203:21
    |
203 |                     ExtMuxCascadedMuxAIndex::M1(ExtMuxCascadedMuxAM1 {
    |                     ^^^^^^^^^^^^^^^^^^^^^^^
    |                     |
    |                     use of undeclared type `ExtMuxCascadedMuxAIndex`
    |                     help: an enum with a similar name exists: `ExtMuxCascadedMuxedA2MuxBIndex`
